gitops/istio/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: yola-httproute
  namespace: istio-system
spec:
  parentRefs:
    - name: yola-gateway
      namespace: istio-system
  hostnames:
    - "yola-istio-ingress.swedencentral.cloudapp.azure.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/
      backendRefs:
        - name: yola-backend
          namespace: yola
          port: 8706
    - backendRefs:
        - name: yola-frontend
          namespace: yola
          port: 3000
