gitops/istio/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ingress-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: yola-gateway
  action: ALLOW
  rules:
    - to:
        - operation:
            paths:
              - "/*"
